...
                    ) {
                        TextField(
                            value = email,
                            onValueChange = { email = it },
                            modifier = Modifier
                                .fillMaxSize()
                                .testTag("email-input")
                                .focusRequester(emailFocusRequester)
                                .border(
                                    width = 1.dp,
                                    color = if (isFocused) AppColors.ActionMain else AppColors.White50,
                                    shape = RoundedCornerShape(14.dp)
                                ),
...
                                navigator?.push(EmailConfirmationScreen(normalizedEmail, EmailProvider.MANUAL))
                            },
                            text = appString(AppString.emailSelectionContinue),
                            isEnabled = isContinueEnabled,
                            modifier = Modifier
                                .fillMaxWidth()
                                .testTag("manual-signin-continue")
                        )

                        NakedButton(
                            title = appString(AppString.emailSelectionBackToOptions),
                            onClick = {
                                focusManager.clearFocus()
...
