...
        properties = DialogProperties(usePlatformDefaultWidth = false)
    ) {
        Box(
            modifier = Modifier
                .fillMaxSize()
                .background(AppColors.Black30)
                .testTag("show-secret-dialog"),
            contentAlignment = Alignment.Center
        ) {
            Box(
                modifier = Modifier
                    .padding(horizontal = 16.dp)
                    .heightIn(
...
                ) {
                    Image(
                        painter = imageProvider.getPainter(AppImage.Close),
                        contentDescription = null,
                        modifier = Modifier
                            .align(Alignment.CenterEnd)
                            .testTag("show-secret-close")
                            .clickable {
                                viewModel.handle(ShowSecretEvents.HideSecret)
                                onDismiss()
                            }
                    )
                }
...
