...
    ) {
        Image(
            painter = imageProvider.getPainter(AppImage.AddButton),
            contentDescription = "Add Secret",
            modifier = Modifier
                .size(imgSize.dp)
                .testTag("add-secret-fab")
                .clickable { action(true) }
        )
    }
}


...
